# Projeto_Tcc_Oseias_Oficial

./: .gitignore  2  404.html  Cronograma de estudos.md  README.md  index.html  mkdocs.yml  objects.inv
interface_aeropendulo/: README.md  main_aeropendulo.py  pyproject.toml  requirements.txt  rungui.py
interface_aeropendulo/interface/: __init__.py  coleta_dados.py  graficos_sinais.py  graphs.py  interface_grafica.py  lista_portas_usb.py  lista_usb.py  test_serial.py  teste2.py
interface_aeropendulo/interface/dados_de_ensaio/: arquivo_2_6_2023_18_38_17.csv  arquivo_2_6_2023_19_2_44.csv  arquivo_2_6_2023_21_9_28.csv  arquivo_30_5_2023_13_46_54.csv  arquivo_30_5_2023_19_0_18.csv  arquivo_4_6_2023_0_51_12.csv  arquivo_4_6_2023_0_51_16.csv  arquivo_5_5_2023_18_0_41.csv  arquivo_5_5_2023_18_20_11.csv  arquivo_5_5_2023_18_21_9.csv  arquivo_5_5_2023_18_24_59.csv  arquivo_5_5_2023_18_43_55.csv  arquivo_5_5_2023_18_49_0.csv  arquivo_5_5_2023_18_52_32.csv  arquivo_5_5_2023_18_53_47.csv  arquivo_5_5_2023_19_10_12.csv  arquivo_5_5_2023_20_48_17.csv  arquivo_7_6_2023_20_39_55.csv  arquivo_9_6_2023_1_48_42.csv
interface_aeropendulo/simulador_aeropendulo/: __init__.py  animacao_aeropendulo.py  graficos_aeropendulo.py  implementacao_controlador.py  modelo_mat_aeropendulo.py  simulador.py
interface_aeropendulo/src_interface/: graficos_sinais.py  interface_grafica.py  test_serial.py
softwares_aeropendulo/: README.md  main_aeropendulo.py  pyproject.toml  requirements.txt  rungui.py
softwares_aeropendulo/design_interface/: Design_interface.xopp
softwares_aeropendulo/simulador_aeropendulo/: animacao_aeropendulo.py
softwares_aeropendulo/src_interface/: __init__.py  coleta_dados.py  graficos_sinais.py  lista_portas_usb.py
(+397 files in other folders)
