[tool.poetry]
name = "interface"
version = "0.1.0"
description = "Interface para interagit com o Aeropêndulo"
authors = ["Oseiasdfarias <oseias.dfarias@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
matplotlib = "^3.7.1"
numpy = "^1.24.2"
pyserial = "^3.5"
customtkinter = "^5.1.2"
pyudev = "^0.24.1"
pandas = "^2.0.1"
scienceplots = "^2.1.0"
mplfonts = "^0.0.8"
vpython = "^7.6.4"
control = "^0.9.4"
scikit-learn = "^1.3.1"
sympy = "^1.12"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
